crates/skrillax-serde-derive-test/tests/ui/unsupported_type.stderr
error[E0599]: no method named `write_to` found for struct `Unrelated` in the current scope
 --> tests/ui/unsupported_type.rs:9:5
  |
4 | struct Unrelated;
  | ---------------- method `write_to` not found for this struct
...
9 |     unrelated: Unrelated,
  |     ^^^^^^^^^ method not found in `Unrelated`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `write_to`, perhaps you need to implement it:
          candidate #1: `Serialize`

error[E0599]: no function or associated item named `read_from` found for struct `Unrelated` in the current scope
 --> tests/ui/unsupported_type.rs:9:5
  |
4 | struct Unrelated;
  | ---------------- function or associated item `read_from` not found for this struct
...
9 |     unrelated: Unrelated,
  |     ^^^^^^^^^ function or associated item not found in `Unrelated`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `read_from`, perhaps you need to implement it:
          candidate #1: `Deserialize`

error[E0599]: no method named `byte_size` found for struct `Unrelated` in the current scope
 --> tests/ui/unsupported_type.rs:9:5
  |
4 | struct Unrelated;
  | ---------------- method `byte_size` not found for this struct
...
9 |     unrelated: Unrelated,
  |     ^^^^^^^^^ method not found in `Unrelated`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `byte_size`, perhaps you need to implement it:
          candidate #1: `ByteSize`
